grid box borders

--- a/arcade.html
+++ b/arcade.html
@@ -13,18 +13,24 @@
         <div class="grid-item-medium">
           <h1>Live Market Data</h1>
           <div class="grid-item-box">
-            <h2>Arcade Market Price</h2>
+            <div class="medium-card-title">
+              <h2>Arcade Market Price</h2>
+            </div>
             <p>$0.23</p>
           </div>
         </div>
         <div class="grid-item-medium">
           <h1>Live Market Data</h1>
           <div class="grid-item-box">
-            <h2>Arcade Market Price</h2>
+            <div class="medium-card-title">
+              <h2>Arcade Market Price</h2>
+            </div>
             <p>$0.23</p>
           </div>
           <div class="grid-item-box">
-            <h2>Solana Market Price</h2>
+            <div class="medium-card-title">
+              <h2>Solana Market Price</h2>
+            </div>
             <p>$0.23</p>
           </div>
         </div>
